--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "14.2.1",
     "next-auth": "^4.24.7",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sonner": "^1.4.41"
   },
   "devDependencies": {
     "eslint": "^8",
